fixes problem description layout for better readability

--- a/src/assets/styles/pages/editor.scss
+++ b/src/assets/styles/pages/editor.scss
@@ -30,6 +30,7 @@
     height: 90%;
     border: 1px solid rgba(255, 255, 255, 0.43);
     background: none;
+    gap: .7rem;
   }
 
   &__right {
